modified:   final/task1_self_supervised_learning/main_notebook.ipynb 	new file:   mid_term/report/1ppbox.png 	new file:   mid_term/report/1result.png 	new file:   mid_term/report/2ppbox.png 	new file:   mid_term/report/2result.png 	new file:   mid_term/report/3ppbox.png 	new file:   mid_term/report/3result.png 	new file:   mid_term/report/4ppbox.png 	new file:   mid_term/report/4result.png 	new file:   mid_term/report/cnntest1.png 	new file:   mid_term/report/cnntest2.png 	new file:   mid_term/report/cnntest3.png 	new file:   mid_term/report/fastrcnn_loss.png 	new file:   mid_term/report/fastrcnn_mAP.png 	modified:   mid_term/report/report_mid.pdf 	modified:   mid_term/report/report_mid.synctex.gz 	modified:   mid_term/report/report_mid.tex 	new file:   mid_term/report/yolotest1.png 	new file:   mid_term/report/yolotest2.png 	new file:   mid_term/report/yolotest3.png 	new file:   mid_term/report/yolov3_loss.png 	new file:   mid_term/report/yolov3_mAP.png

--- a/final/task1_self_supervised_learning/main_notebook.ipynb
+++ b/final/task1_self_supervised_learning/main_notebook.ipynb
@@ -37,6 +37,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 设置参数"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -49,12 +56,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "本实验只微调学习率"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "learning_rate_list = [0.1, 0.01, 0.001]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "构造 Data Loader"
    ]
   },
   {
@@ -65,6 +86,13 @@
    "source": [
     "# 获取数据加载器\n",
     "mini_imagenet_loader, train_loader_cifar100, test_loader_cifar100 = get_dataloaders(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MoCo 预训练"
    ]
   },
   {
@@ -97,6 +125,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 微调\n",
+    "只在MoCo预训练模型上微调。此参数将同时用于三个模型"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -106,6 +142,20 @@
     "print(\"Finetuning MoCo pre-trained model on CIFAR-100...\")\n",
     "best_lr = finetune(train_loader_cifar100, test_loader_cifar100, moco_pretrained_model, learning_rate_list, num_epochs_finetune)\n",
     "print(f'Best learning rate for fine-tuning: {best_lr}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 重新训练模型，可视化训练曲线"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "训练自监督模型"
    ]
   },
   {
@@ -131,6 +181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "训练监督模型"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -153,6 +210,13 @@
     "    val_loss, val_acc = validate_cifar100(test_loader_cifar100, imagenet_pretrained_model, criterion, epoch, imagenet_finetune_writer)\n",
     "    print(f'Epoch [{epoch+1}/{num_epochs_finetune}], Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.2f}%, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.2f}%')\n",
     "imagenet_finetune_writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "训练随机初始化模型"
    ]
   },
   {
